Add fields request_type for Request Registration and refactor SwaggerUI
